--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,1 +1,26 @@
-/* No CSS *//*# sourceMappingURL=footer.css.map */
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Encode+Sans+Condensed");
+footer { background-color: black; color: white; }
+
+footer div .col-0-0 { margin-left: 5px; }
+
+footer div .col-0-0 .tr_an_ti { color: #00a2d8; font-family: 'Encode Sans Condensed', sans-serif; font-weight: bold; }
+
+footer div .col-0-0 a img { width: 10%; -webkit-transition: -webkit-transform 0.5s, -webkit-box-shadow 0.5s; transition: -webkit-transform 0.5s, -webkit-box-shadow 0.5s; transition: transform 0.5s, box-shadow 0.5s; transition: transform 0.5s, box-shadow 0.5s, -webkit-transform 0.5s, -webkit-box-shadow 0.5s; }
+
+footer div .col-0-0 a img:hover { -webkit-transform: scale(0.8); transform: scale(0.8); -webkit-box-shadow: 0 0 5px #b2b2b2; box-shadow: 0 0 5px #b2b2b2; }
+
+footer div .col-0-0 .creators_conteneur { letter-spacing: 1px; text-align: right; position: absolute; right: 5px; top: 0; font-family: 'Encode Sans Condensed', sans-serif; font-weight: bold; }
+
+footer div .col-0-0 .creators_conteneur .creators { font-family: none; font-weight: initial; color: #00a2d8; border-bottom: 1px dotted white; letter-spacing: 0px; -webkit-transition: font-size 0.5s, border-bottom 0.5s, letter-spacing 0.5s; transition: font-size 0.5s, border-bottom 0.5s, letter-spacing 0.5s; }
+
+footer div .col-0-0 .creators_conteneur .creators:hover { font-size: 95%; text-decoration: none; border-bottom: 2px dotted white; letter-spacing: 1px; }
+
+footer div .col-0-0 .creators_conteneur .creators:after { content: "| "; }
+
+footer div .col-0-1 { bottom: 0; font-size: 75%; text-align: right; margin-right: 5px; }
+
+footer div .col-0-1 span { color: #b2b2b2; }
+
+footer div .col-0-1:before { content: "©"; }
+/*# sourceMappingURL=footer.css.map */
