--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,13 +69,13 @@ footer div .copyrighter:before { content: "©"; }
   body header h1 { text-align: center; font-size: 200%; font-weight: bold; }
   body header div div div div { left: 90px !important; width: 100px !important; padding-right: none !important; padding-left: none !important; -webkit-box-shadow: 0 1px 0 black; box-shadow: 0 1px 0 black; }
   body .jumbotron { padding: 0px; margin-left: 90px; width: 65%; }
-  body section { margin: 0; margin-left: 100px; float: left; height: 150px; width: 75%; border-radius: 0px 10px 10px 0px; border: 1px solid #00a2d8; overflow-y: scroll; }
+  body section { -ms-scroll-snap-type: y mandatory; scroll-snap-type: y mandatory; margin: 0; margin-left: 100px; float: left; height: 175px; width: 75%; border-radius: 0px 10px 10px 0px; border: 1px solid #00a2d8; overflow-y: scroll; scroll-padding: 5px; }
   body section::-webkit-scrollbar { width: 60px; }
   body section::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 5px black; box-shadow: inset 0 0 5px black; border-radius: 10px; }
   body section::-webkit-scrollbar-track-piece { background-image: -webkit-gradient(linear, left top, right top, from(#00a2d8), color-stop(55%, white), to(#00a2d8)); background-image: linear-gradient(90deg, #00a2d8 0%, white 55%, #00a2d8 100%); border-radius: 10px; }
   body section::-webkit-scrollbar-thumb { background-image: -webkit-gradient(linear, left top, right top, from(#00a2d8), color-stop(55%, white), to(#00a2d8)); background-image: linear-gradient(90deg, #00a2d8 0%, white 55%, #00a2d8 100%); border-radius: 10px; -webkit-box-shadow: inset 2px 0px 10px black; box-shadow: inset 2px 0px 10px black; -webkit-transition: background-image 1.5s; transition: background-image 1.5s; }
   body section::-webkit-scrollbar-thumb:hover { background-image: -webkit-gradient(linear, left top, right top, from(white), color-stop(55%, #00a2d8), to(white)); background-image: linear-gradient(90deg, white 0%, #00a2d8 55%, white 100%); -webkit-box-shadow: inset -2px 0px 10px black; box-shadow: inset -2px 0px 10px black; }
-  body section .card { height: 150px; width: 100px; display: inline-block; margin: 10px; -webkit-box-shadow: 0px 2px 0px #b2b2b2; box-shadow: 0px 2px 0px #b2b2b2; -webkit-transition: 0.2s; transition: 0.2s; background-color: white; }
+  body section .card { scroll-snap-align: start; height: 150px; width: 100px; display: inline-block; margin: 10px; -webkit-box-shadow: 0px 2px 0px #b2b2b2; box-shadow: 0px 2px 0px #b2b2b2; -webkit-transition: 0.2s; transition: 0.2s; background-color: white; }
   body section .card .card-body a { position: absolute; left: 0px; font-size: 10px; padding: 4px; }
   body section .card .card-title { word-wrap: break-word; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; text-align: center; font-size: 10px; font-weight: bold; color: #00a2d8; text-shadow: 0px 1px 0px black; -webkit-transition: 0.2s; transition: 0.2s; }
   body section .card .badge { width: 100%; }
