--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -32,7 +32,7 @@ body {
         margin: 0;
         margin-left: 200px;
         float: left;
-        height: 300px;
+        height: 330px;
         width: 75%;
         border-radius: 0px 10px 10px 0px;
         border: 1px solid $VIVID_CERULEAN;
@@ -399,4 +399,113 @@ footer {
             }
         }
     }
+}
+
+.css_badge {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    color: white;
+    background-color: rgb(0, 0, 133);
+    width: 50%;
+}
+
+.js_badge {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    color: black;
+    background-color: yellow;
+    width: 50%;
+}
+
+.html_badge {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    color: white;
+    background-color: rgb(0, 0, 133);
+    width: 50%;
+}
+
+.bootstrap_badge {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    color: white;
+    background-color: red;
+    width: 50%;
+}
+
+.api_badge {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    color: black;
+    background-color: rosybrown;
+    width: 50%;
+}
+
+.canvas_badge {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    color: black;
+    background-color: white;
+    box-shadow: inset 1px 1px 1px black;
+    width: 50%;
+}
+
+.generateur {
+    width: 50%;
+    right: 0;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    color: yellow;
+    background-image: url("https://steamuserimages-a.akamaihd.net/ugc/920305549842945092/DD720C8896AEA4B09947C8C3069F633EAD7380FA/");
+    background-position: bottom;
+    text-shadow: 0px 1px 0px #000000, 1px 0px 0px #000000, 0px 0px 1px #000000;
+    box-shadow: inset 0px 0px 15px 0px yellow;
 }
