--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -509,3 +509,16 @@ footer {
     text-shadow: 0px 1px 0px #000000, 1px 0px 0px #000000, 0px 0px 1px #000000;
     box-shadow: inset 0px 0px 15px 0px yellow;
 }
+
+.icone {
+    width: 100px;
+    position: absolute;
+    right: 0;
+    filter: hue-rotate(0deg);
+    transition: filter 2s, padding 1s;
+    padding: 20px;
+    &:hover {
+        padding: 15px;
+        filter: hue-rotate(120deg);
+    }
+}
